--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -146,7 +146,7 @@
     "def learn_model_and_show_f1_score(model):\n",
     "    model.fit(x_train, y_train)\n",
     "    y_pred = model.predict(x_test)\n",
-    "    print(f\"{type(model).__name__} F1 Score is: {f1_score(y_test,y_pred,average='weighted'):.4f}\")"
+    "    print(f\"{type(model).__name__} F1 Score is: {f1_score(y_true=y_test, y_pred=y_pred, average='weighted'):.4f}\")"
    ]
   },
   {
@@ -256,6 +256,24 @@
    ],
    "source": [
     "learn_model_and_show_f1_score(search.best_estimator_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0daf9afd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier F1 Score is: 0.3654\n"
+     ]
+    }
+   ],
+   "source": [
+    "learn_model_and_show_f1_score(RandomForestClassifier(max_depth=50, n_estimators=1000))"
    ]
   }
  ],
