Fixed fundamental flaw

--- a/predict_by_description.ipynb
+++ b/predict_by_description.ipynb
@@ -23,9 +23,7 @@
     "import pandas as pd\n",
     "import re\n",
     "import os\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem.porter import *\n",
+    "\n",
     "import bisect\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -52,34 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
-   "source": [
-    "nltk.download('stopwords')\n",
-    "\n",
-    "def preprocess_text(text: str) -> str:\n",
-    "    stop_words = set(stopwords.words('english'))\n",
-    "    stemmer = PorterStemmer()\n",
-    "    remove_extra_symb: list[str] = re.sub(r'[^\\w^\\s]+', '', str(text)).lower().split()\n",
-    "    return ' '.join([stemmer.stem(w) for w in remove_extra_symb if w not in stop_words])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from .utils import preprocess_text\n",
+    "\n",
     "df['description'] = df['description'].apply(preprocess_text)\n",
     "df = df.drop(columns=['Unnamed: 0'])"
    ]
