Add scaler to models

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2267dcde",
+   "id": "9b665ec8",
    "metadata": {},
    "outputs": [
     {
@@ -600,13 +600,13 @@
    "id": "e06c0fe0",
    "metadata": {},
    "source": [
-    "Также обучим Random_Forest_Classifier, подбирая параметры max_depth и n_estimators - (по итогам побдора, наиболее эффективной оказалась данная модель"
+    "Также обучим Random_Forest_Classifier, подбирая параметры max_depth и n_estimators - (по итогам побдора, наиболее эффективной оказалась указанная модель)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9eb36906",
+   "id": "0718cb2e",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,8 @@
    "source": [
     "best_model = RandomForestClassifier(max_depth=40,n_estimators=340)\n",
     "learn_model_and_show_roc_aus_score(best_model)\n",
-    "pickle.dump(model, open('models/prediction_model.pkl', 'wb'))"
+    "pickle.dump(best_model, open('models/prediction_model.pkl', 'wb'))\n",
+    "pickle.dump(scaler, open('model_model.pkl', 'wb'))\n"
    ]
   },
   {
@@ -634,7 +635,8 @@
      "output_type": "stream",
      "text": [
       "Random Forest with depth = 40 and n_estimators = 200 has ROC_AUC score of: 0.8352\n",
-      "Random Forest with depth = 40 and n_estimators = 220 has ROC_AUC score of: 0.8369\n"
+      "Random Forest with depth = 40 and n_estimators = 220 has ROC_AUC score of: 0.8369\n",
+      "Random Forest with depth = 40 and n_estimators = 260 has ROC_AUC score of: 0.8439\n"
      ]
     }
    ],
