--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9b665ec8",
+   "id": "8922fed2",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
    "id": "6973cb4a",
    "metadata": {},
    "source": [
-    "Обучим несколько различных моделей классификации с разными параметрами и будем считать F1 Score, чтобы определить их качество"
+    "Обучим несколько различных моделей классификации с разными параметрами и будем считать ROC_AUC Score, чтобы определить их качество"
    ]
   },
   {
@@ -582,11 +582,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression ROC_AUC Score is: 0.7720\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.5406\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.6038\n",
-      "MultinomialNB ROC_AUC Score is: 0.6389\n",
-      "DecisionTreeClassifier ROC_AUC Score is: 0.5864\n"
+      "LogisticRegression ROC_AUC Score is: 0.7641\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.5914\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.6679\n",
+      "MultinomialNB ROC_AUC Score is: 0.6789\n",
+      "DecisionTreeClassifier ROC_AUC Score is: 0.6100\n"
      ]
     }
    ],
@@ -606,14 +606,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0718cb2e",
+   "id": "ef21fce4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier ROC_AUC Score is: 0.8326\n"
+      "RandomForestClassifier ROC_AUC Score is: 0.8364\n"
      ]
     }
    ],
@@ -621,7 +621,7 @@
     "best_model = RandomForestClassifier(max_depth=40,n_estimators=340)\n",
     "learn_model_and_show_roc_aus_score(best_model)\n",
     "pickle.dump(best_model, open('models/prediction_model.pkl', 'wb'))\n",
-    "pickle.dump(scaler, open('model_model.pkl', 'wb'))\n"
+    "pickle.dump(scaler, open('models/scaler_model.pkl', 'wb'))"
    ]
   },
   {
@@ -634,9 +634,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest with depth = 40 and n_estimators = 200 has ROC_AUC score of: 0.8352\n",
-      "Random Forest with depth = 40 and n_estimators = 220 has ROC_AUC score of: 0.8369\n",
-      "Random Forest with depth = 40 and n_estimators = 260 has ROC_AUC score of: 0.8439\n"
+      "Random Forest with depth = 40 and n_estimators = 200 has ROC_AUC score of: 0.8423\n"
      ]
     }
    ],
