--- a/model_training_with_text.ipynb
+++ b/model_training_with_text.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8267cff",
+   "id": "40464cb4",
    "metadata": {},
    "source": [
     "Добавим текстовую обработку данных"
@@ -590,23 +590,11 @@
    "execution_count": 9,
    "id": "da6bfe66",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.000000e+00, 1.400000e+07, 6.575393e+00, ..., 5.000000e+00,\n",
-       "       6.000000e+00, 5.000000e+00])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nx_test = bow.transform(df['description'])\n",
     "predicted = text_model.predict(nx_test)\n",
-    "np.append(x_features, predicted)"
+    "x_features['text_prediction'] = predicted"
    ]
   },
   {
@@ -646,7 +634,7 @@
    "id": "6973cb4a",
    "metadata": {},
    "source": [
-    "Обучим несколько различных моделей классификации с разными параметрами и будем считать F1 Score, чтобы определить их качество"
+    "Обучим несколько различных моделей классификации с разными параметрами и будем считать ROC_AUC Score, чтобы определить их качество"
    ]
   },
   {
@@ -668,10 +656,10 @@
    "source": [
     "def learn_model_and_show_roc_aus_score(model, to_print = True):\n",
     "    model.fit(x_train, y_train)\n",
-    "    y_pred = model.predict(x_test)\n",
+    "    y_pred = model.predict_proba(x_test)\n",
     "    if to_print:\n",
-    "        print(f\"{type(model).__name__} ROC_AUC Score is: {f1_score(y_test,y_pred,average='weighted'):.4f}\")\n",
-    "    return f1_score(y_test,y_pred,average='weighted')"
+    "        print(f\"{type(model).__name__} ROC_AUC Score is: {roc_auc_score(y_test,y_pred,average='weighted',multi_class='ovo'):.4f}\")\n",
+    "    return roc_auc_score(y_test,y_pred,average='weighted',multi_class='ovo')"
    ]
   },
   {
@@ -684,11 +672,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression ROC_AUC Score is: 0.3543\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.3563\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.3211\n",
-      "MultinomialNB ROC_AUC Score is: 0.3014\n",
-      "DecisionTreeClassifier ROC_AUC Score is: 0.3577\n"
+      "LogisticRegression ROC_AUC Score is: 0.8957\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.6483\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.7917\n",
+      "MultinomialNB ROC_AUC Score is: 0.7036\n",
+      "DecisionTreeClassifier ROC_AUC Score is: 0.9228\n"
      ]
     }
    ],
@@ -707,10 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "631580c3",
+   "execution_count": 16,
+   "id": "c667d700",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier ROC_AUC Score is: 0.9732\n"
+     ]
+    }
+   ],
    "source": [
     "best_model = RandomForestClassifier(max_depth=60,n_estimators=850)\n",
     "learn_model_and_show_roc_aus_score(best_model)\n",
@@ -724,7 +720,18 @@
    "execution_count": null,
    "id": "85c90968",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest with depth = 40 and n_estimators = 200 has ROC_AUC score of: 0.9707\n",
+      "Random Forest with depth = 40 and n_estimators = 220 has ROC_AUC score of: 0.9726\n",
+      "Random Forest with depth = 40 and n_estimators = 240 has ROC_AUC score of: 0.9759\n",
+      "Random Forest with depth = 40 and n_estimators = 560 has ROC_AUC score of: 0.9760\n"
+     ]
+    }
+   ],
    "source": [
     "best_model = None\n",
     "best_score = 0\n",
