Fixed models output

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8922fed2",
+   "id": "ba0fd47d",
    "metadata": {},
    "outputs": [
     {
@@ -582,11 +582,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression ROC_AUC Score is: 0.7641\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.5914\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.6679\n",
-      "MultinomialNB ROC_AUC Score is: 0.6789\n",
-      "DecisionTreeClassifier ROC_AUC Score is: 0.6100\n"
+      "LogisticRegression ROC_AUC Score is: 0.7350\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.5582\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.5990\n",
+      "MultinomialNB ROC_AUC Score is: 0.6884\n",
+      "DecisionTreeClassifier ROC_AUC Score is: 0.5665\n"
      ]
     }
    ],
@@ -600,20 +600,58 @@
    "id": "e06c0fe0",
    "metadata": {},
    "source": [
-    "Также обучим Random_Forest_Classifier, подбирая параметры max_depth и n_estimators - (по итогам побдора, наиболее эффективной оказалась указанная модель)"
+    "Также обучим Random_Forest_Classifier, подбирая параметры max_depth и n_estimators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ef21fce4",
+   "execution_count": 14,
+   "id": "85c90968",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'best_model = None\\nbest_score = 0\\nfor m_depth in range(40,400,20):\\n    for n_est in range(200,1000,20):\\n        model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\\n        if best_score < model_score:\\n            best_score = model_score\\n            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")\\n            best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)\\n'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''best_model = None\n",
+    "best_score = 0\n",
+    "for m_depth in range(40,400,20):\n",
+    "    for n_est in range(200,1000,20):\n",
+    "        model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\n",
+    "        if best_score < model_score:\n",
+    "            best_score = model_score\n",
+    "            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")\n",
+    "            best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40afed43",
+   "metadata": {},
+   "source": [
+    "По итогам побдора, наиболее эффективной оказалась указанная модель"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "69d1f1da",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier ROC_AUC Score is: 0.8364\n"
+      "RandomForestClassifier ROC_AUC Score is: 0.8164\n"
      ]
     }
    ],
@@ -622,30 +660,6 @@
     "learn_model_and_show_roc_aus_score(best_model)\n",
     "pickle.dump(best_model, open('models/prediction_model.pkl', 'wb'))\n",
     "pickle.dump(scaler, open('models/scaler_model.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85c90968",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest with depth = 40 and n_estimators = 200 has ROC_AUC score of: 0.8423\n"
-     ]
-    }
-   ],
-   "source": [
-    "best_score = 0\n",
-    "for m_depth in range(40,400,20):\n",
-    "    for n_est in range(200,1000,20):\n",
-    "        model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\n",
-    "        if best_score < model_score:\n",
-    "            best_score = model_score\n",
-    "            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")"
    ]
   }
  ],
