--- a/model_training_with_text.ipynb
+++ b/model_training_with_text.ipynb
@@ -31,7 +31,17 @@
    "execution_count": 2,
    "id": "443e0d6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Artem\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -48,7 +58,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "import pickle\n",
     "\n",
-    "\n",
+    "from utils import preprocess_text\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem.porter import *\n",
@@ -499,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40464cb4",
+   "id": "ea18b41f",
    "metadata": {},
    "source": [
     "Добавим текстовую обработку данных"
@@ -508,32 +518,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4e1287c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Artem\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
-   "source": [
-    "nltk.download('stopwords')\n",
-    "\n",
-    "def preprocess_text(text: str) -> str:\n",
-    "    stop_words = set(stopwords.words('english'))\n",
-    "    stemmer = PorterStemmer()\n",
-    "    remove_extra_symb: list[str] = re.sub(r'[^\\w^\\s]+', '', str(text)).lower().split()\n",
-    "    return ' '.join([stemmer.stem(w) for w in remove_extra_symb if w not in stop_words])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "3cf376c4",
    "metadata": {},
    "outputs": [],
@@ -544,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8e59bac4",
    "metadata": {},
    "outputs": [
@@ -557,7 +541,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1d394ea1",
    "metadata": {},
    "outputs": [],
@@ -587,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "da6bfe66",
    "metadata": {},
    "outputs": [],
@@ -599,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "935dee47",
    "metadata": {},
    "outputs": [],
@@ -611,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5336a988",
    "metadata": {},
    "outputs": [],
@@ -621,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9fd17adb",
    "metadata": {},
    "outputs": [],
@@ -639,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "328f54ea",
    "metadata": {},
    "outputs": [],
@@ -649,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "31304347",
    "metadata": {},
    "outputs": [],
@@ -664,22 +648,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a4e52b44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LogisticRegression ROC_AUC Score is: 0.8957\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.6483\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.7917\n",
-      "MultinomialNB ROC_AUC Score is: 0.7036\n",
-      "DecisionTreeClassifier ROC_AUC Score is: 0.9228\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for model in model_list:\n",
     "    learn_model_and_show_roc_aus_score(model)"
@@ -695,52 +667,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c667d700",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RandomForestClassifier ROC_AUC Score is: 0.9732\n"
-     ]
-    }
-   ],
-   "source": [
-    "best_model = RandomForestClassifier(max_depth=60,n_estimators=850)\n",
-    "learn_model_and_show_roc_aus_score(best_model)\n",
-    "pickle.dump(model, open('models/prediction_model_text.pkl', 'wb'))\n",
-    "pickle.dump(scaler, open('models/scaler_model_text.pkl', 'wb'))\n",
-    "pickle.dump(scaler, open('models/bow.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "85c90968",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest with depth = 40 and n_estimators = 200 has ROC_AUC score of: 0.9707\n",
-      "Random Forest with depth = 40 and n_estimators = 220 has ROC_AUC score of: 0.9726\n",
-      "Random Forest with depth = 40 and n_estimators = 240 has ROC_AUC score of: 0.9759\n",
-      "Random Forest with depth = 40 and n_estimators = 560 has ROC_AUC score of: 0.9760\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "best_model = None\n",
+    "'''best_model = None\n",
     "best_score = 0\n",
     "for m_depth in range(40,400,20):\n",
     "    for n_est in range(200,1000,20):\n",
     "        model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\n",
     "        if best_score < model_score:\n",
     "            best_score = model_score\n",
-    "            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")"
+    "            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")\n",
+    "            best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7c8c64f",
+   "metadata": {},
+   "source": [
+    "По итогам побдора, наиболее эффективной оказалась указанная модель"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b1053b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = RandomForestClassifier(max_depth=60,n_estimators=850)\n",
+    "learn_model_and_show_roc_aus_score(best_model)\n",
+    "pickle.dump(best_model, open('models/prediction_model_text.pkl', 'wb'))\n",
+    "pickle.dump(scaler, open('models/scaler_model_text.pkl', 'wb'))\n",
+    "pickle.dump(bow, open('models/bow.pkl', 'wb'))"
    ]
   }
  ],
