--- a/model_training_with_text.ipynb
+++ b/model_training_with_text.ipynb
@@ -525,15 +525,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e6f9d38",
+   "id": "c6f5b051",
    "metadata": {},
    "source": [
-    "Обучим текстовую модель"
+    "Разделим сразу все данные на train и test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d90aae5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEST_SIZE = 0.1\n",
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "train_df, test_df = train_test_split(df, test_size=TEST_SIZE, random_state=RANDOM_STATE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e6f9d38",
+   "metadata": {},
+   "source": [
+    "Обучим текстовую модель на части train выборки, чтобы при обучении основной модели ей попадались и те элементы, которые видела текстовая модель при обучении, и те, которые она не видела"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "8e59bac4",
    "metadata": {},
    "outputs": [
@@ -950,20 +971,20 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df, test_df = train_test_split(df, test_size=0.1, random_state=42)\n",
+    "text_train_df, _ = train_test_split(train_df, test_size=0.5, random_state=69)\n",
     "\n",
     "bow = CountVectorizer()\n",
-    "x_train = bow.fit_transform(train_df['description'])\n",
-    "y_train = train_df['revenue']\n",
+    "text_x_train = bow.fit_transform(text_train_df['description'])\n",
+    "text_y_train = text_train_df['revenue']\n",
     "\n",
     "text_model = SVC(kernel='linear')\n",
-    "text_model.fit(x_train, y_train)"
+    "text_model.fit(text_x_train, text_y_train)"
    ]
   },
   {
@@ -976,23 +997,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1d394ea1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_features = df.drop(['revenue', 'description'], axis=1)"
+    "main_x = df.drop(columns=['revenue', 'description'])\n",
+    "main_x['text_prediction'] = text_model.predict(bow.transform(df['description']))\n",
+    "\n",
+    "main_y = df['revenue']"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "da6bfe66",
+   "cell_type": "markdown",
+   "id": "2b9c8eab",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "text_model_prediction = text_model.predict(bow.transform(df['description']))\n",
-    "x_features['text_prediction'] = text_model_prediction"
+    "Добавим MinMax scaler"
    ]
   },
   {
@@ -1003,36 +1024,28 @@
    "outputs": [],
    "source": [
     "scaler = MinMaxScaler()\n",
-    "scaler.fit(x_features)\n",
-    "x_features = scaler.transform(x_features)"
+    "scaler.fit(main_x)\n",
+    "main_x = scaler.transform(main_x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5336a988",
+   "id": "9fd17adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_df = df['revenue']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "373a54c5",
-   "metadata": {},
-   "source": [
-    "Важно для основной модели выбрать такое же разбиение на train и test, как и для текстовой модели, иначе текстовая модель будет знать часть тестовой выборки и метрика покажет сильно лучшие результаты, чем они будут на самом деле."
+    "main_x_train, main_x_test, main_y_train, main_y_test = train_test_split(main_x, main_y, test_size=TEST_SIZE, random_state=RANDOM_STATE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9fd17adb",
+   "id": "fec2d154",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x_features, y_df, test_size=0.1, random_state=42)"
+    "_ , main_x_train, _, main_y_train = train_test_split(main_x_train, main_y_train, test_size=0.5, random_state=69) "
    ]
   },
   {
@@ -1061,11 +1074,12 @@
    "outputs": [],
    "source": [
     "def train_model_and_show_roc_aus_score(model, to_print = True):\n",
-    "    model.fit(x_train, y_train)\n",
-    "    y_pred = model.predict_proba(x_test)\n",
+    "    model.fit(main_x_train, main_y_train)\n",
+    "    y_pred = model.predict_proba(main_x_test)\n",
+    "    score = roc_auc_score(main_y_test, y_pred, average='weighted', multi_class='ovo')\n",
     "    if to_print:\n",
-    "        print(f\"{type(model).__name__} ROC_AUC Score is: {roc_auc_score(y_test,y_pred,average='weighted',multi_class='ovo'):.4f}\")\n",
-    "    return roc_auc_score(y_test,y_pred,average='weighted',multi_class='ovo')"
+    "        print(f\"{type(model).__name__} ROC_AUC Score is: {score:.4f}\")\n",
+    "    return score"
    ]
   },
   {
@@ -1078,11 +1092,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression ROC_AUC Score is: 0.7150\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.5706\n",
-      "KNeighborsClassifier ROC_AUC Score is: 0.6109\n",
-      "MultinomialNB ROC_AUC Score is: 0.7074\n",
-      "DecisionTreeClassifier ROC_AUC Score is: 0.5706\n"
+      "LogisticRegression ROC_AUC Score is: 0.7266\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.5784\n",
+      "KNeighborsClassifier ROC_AUC Score is: 0.6248\n",
+      "MultinomialNB ROC_AUC Score is: 0.6753\n",
+      "DecisionTreeClassifier ROC_AUC Score is: 0.5896\n"
      ]
     }
    ],
@@ -1147,7 +1161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier ROC_AUC Score is: 0.7785\n"
+      "RandomForestClassifier ROC_AUC Score is: 0.8157\n"
      ]
     }
    ],
