--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -13,7 +13,7 @@
    "id": "db0e5f9b",
    "metadata": {},
    "source": [
-    "## Часть 2: Подбор и обучение моделей"
+    "## Часть 2: подбор и обучение моделей"
    ]
   },
   {
@@ -46,13 +46,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "import pickle\n",
-    "\n",
-    "\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem.porter import *\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "import pickle"
    ]
   },
   {
@@ -564,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def learn_model_and_show_roc_aus_score(model, to_print = True):\n",
+    "def train_model_and_show_roc_aus_score(model, to_print = True):\n",
     "    model.fit(x_train, y_train)\n",
     "    y_pred = model.predict_proba(x_test)\n",
     "    if to_print:\n",
@@ -592,7 +586,7 @@
    ],
    "source": [
     "for model in model_list:\n",
-    "    learn_model_and_show_roc_aus_score(model)"
+    "    train_model_and_show_roc_aus_score(model)"
    ]
   },
   {
@@ -621,16 +615,15 @@
     }
    ],
    "source": [
-    "'''best_model = None\n",
-    "best_score = 0\n",
-    "for m_depth in range(40,400,20):\n",
-    "    for n_est in range(200,1000,20):\n",
-    "        model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\n",
-    "        if best_score < model_score:\n",
-    "            best_score = model_score\n",
-    "            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")\n",
-    "            best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)\n",
-    "'''\n"
+    "# best_model = None\n",
+    "# best_score = 0\n",
+    "# for m_depth in range(40,400,20):\n",
+    "#     for n_est in range(200,1000,20):\n",
+    "#         model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\n",
+    "#         if best_score < model_score:\n",
+    "#             best_score = model_score\n",
+    "#             print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")\n",
+    "#             best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)\n"
    ]
   },
   {
@@ -656,8 +649,8 @@
     }
    ],
    "source": [
-    "best_model = RandomForestClassifier(max_depth=40,n_estimators=340)\n",
-    "learn_model_and_show_roc_aus_score(best_model)\n",
+    "best_model = RandomForestClassifier(max_depth=40, n_estimators=340)\n",
+    "train_model_and_show_roc_aus_score(best_model)\n",
     "pickle.dump(best_model, open('models/prediction_model.pkl', 'wb'))\n",
     "pickle.dump(scaler, open('models/scaler_model.pkl', 'wb'))"
    ]
@@ -679,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
