--- a/model_training_with_text.ipynb
+++ b/model_training_with_text.ipynb
@@ -13,7 +13,7 @@
    "id": "db0e5f9b",
    "metadata": {},
    "source": [
-    "## Часть 2: Подбор и обучение моделей"
+    "## Часть 3: подбор параметров и обучение текстовой модели"
    ]
   },
   {
@@ -1096,7 +1096,7 @@
       "KNeighborsClassifier ROC_AUC Score is: 0.5784\n",
       "KNeighborsClassifier ROC_AUC Score is: 0.6248\n",
       "MultinomialNB ROC_AUC Score is: 0.6753\n",
-      "DecisionTreeClassifier ROC_AUC Score is: 0.5896\n"
+      "DecisionTreeClassifier ROC_AUC Score is: 0.5994\n"
      ]
     }
    ],
@@ -1120,27 +1120,28 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'best_model = None\\nbest_score = 0\\nfor m_depth in range(40,400,20):\\n    for n_est in range(200,1000,20):\\n        model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\\n        if best_score < model_score:\\n            best_score = model_score\\n            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")\\n            best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)\\n'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest with depth = 40 and n_estimators = 200 has ROC_AUC score of: 0.8057\n",
+      "Random Forest with depth = 40 and n_estimators = 220 has ROC_AUC score of: 0.8109\n",
+      "Random Forest with depth = 40 and n_estimators = 280 has ROC_AUC score of: 0.8132\n",
+      "Random Forest with depth = 40 and n_estimators = 320 has ROC_AUC score of: 0.8144\n",
+      "Random Forest with depth = 40 and n_estimators = 400 has ROC_AUC score of: 0.8209\n",
+      "Random Forest with depth = 60 and n_estimators = 780 has ROC_AUC score of: 0.8211\n"
+     ]
     }
    ],
    "source": [
-    "'''best_model = None\n",
+    "best_model = None\n",
     "best_score = 0\n",
     "for m_depth in range(40,400,20):\n",
     "    for n_est in range(200,1000,20):\n",
-    "        model_score = learn_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth,n_estimators=n_est),to_print=False)\n",
+    "        model_score = train_model_and_show_roc_aus_score(RandomForestClassifier(max_depth=m_depth, n_estimators=n_est), to_print=False)\n",
     "        if best_score < model_score:\n",
     "            best_score = model_score\n",
     "            print(f\"Random Forest with depth = {m_depth} and n_estimators = {n_est} has ROC_AUC score of: {model_score:.4f}\")\n",
-    "            best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)\n",
-    "'''"
+    "            best_model = RandomForestClassifier(max_depth=m_depth,n_estimators=n_est)"
    ]
   },
   {
@@ -1153,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "11b1053b",
    "metadata": {},
    "outputs": [
@@ -1161,12 +1162,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier ROC_AUC Score is: 0.8157\n"
+      "RandomForestClassifier ROC_AUC Score is: 0.8145\n"
      ]
     }
    ],
    "source": [
-    "best_model = RandomForestClassifier(max_depth=60,n_estimators=850)\n",
+    "best_model = RandomForestClassifier(max_depth=60, n_estimators=780)\n",
     "train_model_and_show_roc_aus_score(best_model)\n",
     "pickle.dump(best_model, open(os.path.join('models', 'prediction_model_text.pkl'), 'wb'))\n",
     "pickle.dump(scaler, open(os.path.join('models', 'scaler_model_text.pkl'), 'wb'))\n",
